--- a/styles/style.css
+++ b/styles/style.css
@@ -41,9 +41,13 @@ form {
 	background-color: rgb(255, 255, 255);
 }
 
-form p {
-	text-align: center;
+ul {
+	padding-left: 0;
 }
+
+/*form p {
+	text-align: center;
+}*/
 
 .content-wrapper {
 	display: grid;
@@ -73,6 +77,17 @@ form p {
 #form-wrapper {
 	padding: 0.3em;
 }
+
+#form-footer {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+}
+
+#impression-label {
+
+}
+
 
 
 
